--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "jotai": "^2.2.0",
+    "lodash-es": "^4.17.21",
     "plasmo": "0.74.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
