feat: font and logout feature and other style

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v2ex-jobs",
   "displayName": "v2ex-jobs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "一个v2ex插件，随时随地获取v2ex上的招聘信息",
   "author": "aaron",
   "scripts": {
@@ -38,6 +38,14 @@
     ],
     "permissions": [
       "storage"
-    ]
+    ],
+    "commands": {
+      "_execute_action": {
+        "suggested_key": {
+          "default": "Ctrl+Shift+U",
+          "mac": "Command+Shift+U"
+        }
+      }
+    }
   }
 }
